--- a/internal-core/src/main/resources/application-internal.yml
+++ b/internal-core/src/main/resources/application-internal.yml
@@ -15,9 +15,11 @@ qodo:
     token: ${WEBSOCKET_TOKEN}
     # Health check configuration
     # How often to send ping messages to verify connection health
-    ping-interval-seconds: ${QODO_WS_PING_INTERVAL_SECONDS:30}
+    # Reduced from 30s to 15s for faster connection issue detection
+    ping-interval-seconds: ${QODO_WS_PING_INTERVAL_SECONDS:15}
     # Maximum time to wait for pong response before considering connection dead
-    pong-timeout-seconds: ${QODO_WS_PONG_TIMEOUT_SECONDS:10}
+    # Reduced from 10s to 5s for faster failure detection
+    pong-timeout-seconds: ${QODO_WS_PONG_TIMEOUT_SECONDS:5}
 
     # Connection timeout configuration
     # Maximum time to establish initial WebSocket connection
