--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -1,31 +1,15 @@
-services:
-  # Apache ActiveMQ Service
-  activemq:
-    image: apache/activemq-classic:6.1.4
-    container_name: qodo-activemq
-    ports:
-      - "61616:61616"  # OpenWire protocol (JMS)
-      - "8161:8161"    # Web Console
-    environment:
-      ACTIVEMQ_USERNAME: ${ACTIVEMQ_USERNAME:-qodo}
-      ACTIVEMQ_PASSWORD: ${ACTIVEMQ_PASSWORD:-qodo}
-      ACTIVEMQ_ADMIN_LOGIN: ${ACTIVEMQ_ADMIN_LOGIN:-admin}
-      ACTIVEMQ_ADMIN_PASSWORD: ${ACTIVEMQ_ADMIN_PASSWORD:-admin}
-      ACTIVEMQ_WEBADMIN_LOGIN: ${ACTIVEMQ_WEBADMIN_LOGIN:-admin}
-      ACTIVEMQ_WEBADMIN_PASSWORD: ${ACTIVEMQ_WEBADMIN_PASSWORD:-admin}
-    # Explicit ephemeral storage using tmpfs (in-memory, faster, lost on container stop)
-    tmpfs:
-      - /opt/apache-activemq/data:size=1G
-    networks:
-      - qodo-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "-u", "admin:admin", "http://localhost:8161/admin/"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
+# Docker Compose configuration for LOCAL QUEUE (no ActiveMQ)
+# 
+# Usage:
+#   docker-compose -f docker-compose.local.yml up
+#
+# This configuration:
+# - Does NOT start ActiveMQ
+# - Uses local in-memory queue
+# - Includes monitoring (Prometheus & Grafana)
 
-  # Spring Boot Application
+services:
+  # Spring Boot Application with Local Queue
   command-sdk:
     build:
       context: ..
@@ -45,9 +29,9 @@ services:
       QODO_MCP_REQUEST_TIMEOUT_SECONDS: ${QODO_MCP_REQUEST_TIMEOUT_SECONDS:-300}
       QODO_METRICS_CACHE_MAX_SIZE: ${QODO_METRICS_CACHE_MAX_SIZE:-5000}
       QODO_METRICS_CACHE_EXPIRE_MINUTES: ${QODO_METRICS_CACHE_EXPIRE_MINUTES:-30}
+      
       # WebSocket Configuration
       WEBSOCKET_TOKEN: ${WEBSOCKET_TOKEN}
-
       GITHUB_API_TOKEN: ${GITHUB_API_TOKEN}
       
       # Snyk Webhook Configuration
@@ -67,21 +51,16 @@ services:
       # MCP Atlassian Configuration
       MCP_ATLASSIAN_HOST: mcp-atlassian
       
-      # Messaging Configuration - ActiveMQ
-      MESSAGING_PROVIDER: ${MESSAGING_PROVIDER:-activemq}
+      # Messaging Configuration - LOCAL QUEUE
+      MESSAGING_PROVIDER: local
       MESSAGING_DEFAULT_TOPIC: ${MESSAGING_DEFAULT_TOPIC:-audit}
       MESSAGING_EVENT_TOPIC: ${MESSAGING_EVENT_TOPIC:-event}
       MESSAGING_RESPONSE_TOPIC: ${MESSAGING_RESPONSE_TOPIC:-response}
       
-      # ActiveMQ Connection
-      MESSAGING_ACTIVEMQ_BROKER_URL: tcp://activemq:61616
-      MESSAGING_ACTIVEMQ_USERNAME: ${ACTIVEMQ_USERNAME:-qodo}
-      MESSAGING_ACTIVEMQ_PASSWORD: ${ACTIVEMQ_PASSWORD:-qodo}
+      # JMS Health Check - DISABLED for local queue
+      JMS_HEALTH_ENABLED: false
       
-      # JMS Health Check (disable when using local queue)
-      JMS_HEALTH_ENABLED: ${JMS_HEALTH_ENABLED:-true}
-      
-      # Local Queue Configuration (when MESSAGING_PROVIDER=local)
+      # Local Queue Configuration
       LOCAL_QUEUE_CAPACITY: ${LOCAL_QUEUE_CAPACITY:-1000}
       LOCAL_CONSUMER_THREADS: ${LOCAL_CONSUMER_THREADS:-1}
       LOCAL_RETRY_ATTEMPTS: ${LOCAL_RETRY_ATTEMPTS:-3}
@@ -90,6 +69,7 @@ services:
       LOCAL_POLL_TIMEOUT_SECONDS: ${LOCAL_POLL_TIMEOUT_SECONDS:-5}
       LOCAL_EXPONENTIAL_BACKOFF: ${LOCAL_EXPONENTIAL_BACKOFF:-true}
 
+      # Git SSH Configuration
       GIT_SSH_PRIVATE_KEY: ${GIT_SSH_PRIVATE_KEY:-MISSING}
 
       # Logging Configuration
@@ -97,9 +77,8 @@ services:
 
       # JVM Options
       JAVA_OPTS: ${JAVA_OPTS:--XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0}
-    depends_on:
-      activemq:
-        condition: service_healthy
+    
+    # NO dependency on ActiveMQ
     networks:
       - qodo-network
     healthcheck:
@@ -111,7 +90,8 @@ services:
     volumes:
       - ${HOME}/code/docker_mnt/compose-command-sdk/command-sdk:/app/data
     restart: unless-stopped
-  # --- new ---
+
+  # Prometheus for metrics
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -130,6 +110,7 @@ services:
       - qodo-network
     restart: unless-stopped
 
+  # Grafana for dashboards
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
@@ -156,10 +137,7 @@ networks:
     driver: bridge
 
 volumes:
-  # Persistent volumes for monitoring stack
   prometheus_data:
     driver: local
   grafana_data:
     driver: local
-
-# Note: ActiveMQ uses ephemeral tmpfs storage - no persistent volume
