--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  # Base Image Builder (run occasionally with: docker compose --profile build-base build base-builder)
+  base-builder:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.base
+    image: qodo/command-sdk-base:latest
+    container_name: qodo-base-builder
+    profiles: ["build-base"]
+    command: echo "Base image built successfully"
+
   # Apache ActiveMQ Service
   activemq:
     image: apache/activemq-classic:6.1.4
@@ -29,8 +39,13 @@ services:
   command-sdk:
     build:
       context: ..
-      dockerfile: docker/Dockerfile
-    image: command-sdk:${VERSION:-latest}
+      dockerfile: docker/Dockerfile.app
+      cache_from:
+        - qodo/command-sdk-base:latest
+        - qodo/command-sdk:latest
+      args:
+        BUILDKIT_INLINE_CACHE: 1
+    image: qodo/command-sdk:${VERSION:-latest}
     container_name: command-sdk-app
     ports:
       - "${SERVER_PORT:-8081}:8081"
@@ -49,7 +64,9 @@ services:
       WEBSOCKET_TOKEN: ${WEBSOCKET_TOKEN}
 
       GITHUB_API_TOKEN: ${GITHUB_API_TOKEN}
-      
+
+      SNYK_TOKEN: ${SNYK_API_TOKEN}
+
       # Snyk Webhook Configuration
       SNYK_WEBHOOK_SECRET: ${SNYK_WEBHOOK_SECRET:-lower-test-token-replace}
       SNYK_WEBHOOK_VALIDATION_ENABLED: ${SNYK_WEBHOOK_VALIDATION_ENABLED:-false}
