--- a/docker/monitoring/grafana-provisioning/dashboards/springboot.yml
+++ b/docker/monitoring/grafana-provisioning/dashboards/springboot.yml
@@ -1,8 +1,8 @@
 apiVersion: 1
 providers:
-  - name: 'Command SDK Dashboards'
+  - name: 'Agent SDK Dashboards'
     orgId: 1
-    folder: 'Spring Boot'
+    folder: 'Qodo'
     type: file
     disableDeletion: false
     editable: true
