--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -51,7 +51,7 @@ services:
       # MCP Atlassian Configuration
       MCP_ATLASSIAN_HOST: mcp-atlassian
 
-      SNYK_TOKEN: ${SNYK_API_TOKEN}
+      SNYK_TOKEN: ${SNYK_TOKEN}
       # Messaging Configuration - LOCAL QUEUE
       MESSAGING_PROVIDER: local
       MESSAGING_DEFAULT_TOPIC: ${MESSAGING_DEFAULT_TOPIC:-audit}
