Refactor incomplete node service naming and improve handler logging with trace support

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -40,3 +40,6 @@ jira:
 #
 # qodo:
 #   blockedTools: scout-server:dependencies_list,restricted_command
+logging:
+  level:
+    ai.qodo.command.app.handlers.IncompleteAgentResponseHandler: TRACE
